# tobsdb

./: .air.toml  .gitignore  .goreleaser.yaml  404.html  LICENSE  README.md  TODO.txt  go.mod  go.sum  index.html  makefile  mkdocs.yaml  rules.tobs  schema.tdb  schema.tobs  search.html
.github/workflows/: docs.yml  releaser.yml  test.yml
actions/: index.html
client/js/: README.md  package.json  pnpm-lock.yaml  schema.tdb
client/rust/: Cargo.toml  test_schema.tdb
client/rust/src/: lib.rs
clients/js/: index.html
clients/overview/: index.html
cmd/builder/: handler.go  main.go  table.go  utils.go
cmd/main/: main.go
cmd/parser/: field.go  schema.go  table.go
cmd/tdb/: main.go
cmd/tdb-generate/: main.go
cmd/tdb-validate/: main.go
cmd/types/: props.go
docs/: actions.md  dynamic-queries.md  getting-started.md  index.md  schema.md  tdb-generate.md
docs/clients/: js.md  overview.md
dynamic-queries/: index.html
getting-started/: index.html
internal/auth/: user.go
internal/builder/: compare.go  conn.go  field.go  field_test.go  handler.go  index.go  main.go  paging_manager.go  paging_manager_test.go  parse.go  rows.go  rows_test.go  schema.go  schema_test.go  table.go  tdb.go  utils.go
internal/conn/: conn.go  conn_ctx.go  handler.go  handler_test.go  request_action.go  tdb.go  tdb_test.go  user.go
internal/paging/: page.go  page_test.go
pkg/: logger.go  map.go  mutex.go  tcp.go  utils.go  utils_test.go
schema/: index.html
search/: search_index.json
tdb-generate/: index.html
tests/: client.mjs  package.json  pnpm-lock.yaml  test.mjs
(+65 files in other folders)
