[package]
name = "tobsdb"
version = "0.0.0"
edition = "2021"
description = "Official TobsDB Rust Client"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tobsdb/tobsdb/blob/main/client/rust"
keywords = ["tobsdb", "database", "client"]
categories = ["api-bindings", "database", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20.1", features = ["tokio-rustls"] }
url = "2.4.1"
httparse = "1.8.0"
tokio = { version = "1.33.0", default-features = false, features = ["io-util", "rt", "macros"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }

